# FAST

./: LICENSE  README.md  THIRD_PARTY_NOTICES.md
amd/: Makefile  README.md  flash.cpp  run.sh  setup.py  test_alltoall.cpp  torch_run.sh  torch_tester.py
amd/result/: 2n_perf_e16_t2_flash.txt  2n_perf_e16_t2_rccl.txt  3n_fixed_sz_1736528199.txt  3n_fixed_sz_1736528708.txt  3n_fixed_sz_1736536811.txt  3n_fixed_sz_1736585927.txt  3n_perf_e24_t2_flash.txt  3n_perf_e24_t2_rccl.txt  3n_random_cdf_1736529865.txt  3n_random_cdf_1736578655.txt  3n_random_sz_1736529167.txt  3n_random_sz_1736558793.txt  3n_random_sz_1736590493.txt  3n_skewed_cdf_1736529888.txt  3n_skewed_cdf_1736581181.txt  3n_skewed_sz__1736529610.txt  3n_skewed_sz__1736571634.txt  3n_skewness_1736529848.txt  3n_skewness_1736576532.txt  4n_fixed_sz_1737734852.txt  4n_fixed_sz_1737753246.txt  4n_fixed_sz_1737754214.txt  4n_fixed_sz_1737757545.txt  4n_fixed_sz_1737759949.txt  4n_fixed_sz_1737782739.txt  4n_nack_1737761461.txt  4n_nack_1737761903.txt  4n_nack_1737767318.txt  4n_perf_e32_t1_flash.txt  4n_perf_e32_t1_rccl.txt  4n_perf_e32_t2_flash.txt  4n_perf_e32_t2_rccl.txt  4n_perf_e32_t3_flash.txt  4n_perf_e32_t3_rccl.txt  4n_perf_e32_t4_flash.txt  4n_perf_e32_t4_rccl.txt  4n_random_cdf_1737735797.txt  4n_random_cdf_1737791733.txt  4n_random_sz_1737735306.txt  4n_random_sz_1737754677.txt  (+8 more)
nvidia/: CMakeLists.txt  README.md  alltoall_nvshmem.cpp  flash_tester.py  flash_utils.py
nvidia/src/fast_alltoall/: alltoall_algorithm.cc  alltoall_global_scheduler.cc  alltoall_local_scheduler.cc  alltoall_matrix.cc  flash_alltoall_nvshmem.cu
nvidia/src/include/: registration.h
nvidia/src/include/fast_alltoall/: alltoall_algorithm.h  alltoall_define.h  alltoall_global_scheduler.h  alltoall_local_scheduler.h  alltoall_matrix.h  flash_alltoall_nvshmem.h
simulation/: Makefile  README.md  define.h  main.cpp  test.cpp  test.h
(+17 files in other folders)
